{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 8,
  "lineage": "50d4c08f-4877-2557-da72-f44dd904e696",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_00b7146ecb7914fb5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:248882477880:internet-gateway/igw-00b7146ecb7914fb5",
            "id": "igw-00b7146ecb7914fb5",
            "owner_id": "248882477880",
            "vpc_id": "vpc-05ddd616329ce39ab"
          },
          "dependencies": [
            "aws_vpc.vpc_05ddd616329ce39ab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_0ee5246c5abe9cf25",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:248882477880:route-table/rtb-0ee5246c5abe9cf25",
            "id": "rtb-0ee5246c5abe9cf25",
            "owner_id": "248882477880",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00b7146ecb7914fb5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": {
              "create": null,
              "delete": null,
              "update": null
            },
            "vpc_id": "vpc-05ddd616329ce39ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_00b7146ecb7914fb5",
            "aws_vpc.vpc_05ddd616329ce39ab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_0a79de319111acb92",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:248882477880:security-group/sg-0a79de319111acb92",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a79de319111acb92",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "248882477880",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05ddd616329ce39ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_05ddd616329ce39ab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_04ad0951d88b4bb18",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:248882477880:subnet/subnet-04ad0951d88b4bb18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ad0951d88b4bb18",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "248882477880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "timeouts": {
            },
            "vpc_id": "vpc-05ddd616329ce39ab"
          },
          "dependencies": [
            "aws_vpc.vpc_05ddd616329ce39ab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_0cfeed43a89fc54e1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:248882477880:subnet/subnet-0cfeed43a89fc54e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cfeed43a89fc54e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "248882477880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "timeouts": {
            },
            "vpc_id": "vpc-05ddd616329ce39ab"
          },
          "dependencies": [
            "aws_vpc.vpc_05ddd616329ce39ab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_0d74c728064e43186",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:248882477880:subnet/subnet-0d74c728064e43186",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d74c728064e43186",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "248882477880",
            "private_dns_hostname_type_on_launch": "ip-name",
            "timeouts": {
            },
            "vpc_id": "vpc-05ddd616329ce39ab"
          },
          "dependencies": [
            "aws_vpc.vpc_05ddd616329ce39ab"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_05ddd616329ce39ab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:248882477880:vpc/vpc-05ddd616329ce39ab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0d774df205168b9dc",
            "default_route_table_id": "rtb-0ee5246c5abe9cf25",
            "default_security_group_id": "sg-0a79de319111acb92",
            "dhcp_options_id": "dopt-023dd8b1cabf272c9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05ddd616329ce39ab",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ee5246c5abe9cf25",
            "owner_id": "248882477880"
          }
        }
      ]
    }
  ]
}